Add common module with basic utilities and configuration

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
         <!--TA4J: 기술적 분석 라이브러리-->
         <dependency>
